--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 
+/* --------------------------------------------------------------Variables */
+
 :root {
     --very-dark-blue: hsl(233, 47%, 7%);
     --dark-desaturated-blue: hsl(244, 38%, 16%);
@@ -11,7 +13,7 @@
     --stat-heads-white: hsla(0, 0%, 100%, 0.6);
 }
 
-/* --------------------------------------------------------------Defaults */
+/* --------------------------------------------------------------Default */
 
 *,
 *::before,
@@ -23,11 +25,13 @@
 }
 
 .body {
-    min-height: 100svh;
+    min-height: 100vh;
     display: grid;
     place-content: center;
 
     background-color: var(--very-dark-blue);
+
+    user-select: none;
 }
 
 /* --------------------------------------------------------------Main */
@@ -55,8 +59,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 4.5rem 4.5rem 4rem 4.5rem;
-
-    user-select: none;
 }
 
 .content__desc {
@@ -118,22 +120,13 @@
 
 .picture {
     position: relative;
+    background-color: var(--soft-violet);
 }
 
 .picture__img {
-    user-select: none;
-}
-
-.picture::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-
-    background-color: var(--soft-violet);
-
-    filter: contrast(2) hue-rotate(-10deg);
+    pointer-events: none;
     mix-blend-mode: multiply;
-    opacity: .7;
+    opacity: .75;
 }
 
 /* --------------------------------------------------------------Media Queries */
@@ -182,29 +175,4 @@
     .attribution {
         display: none;
     }
-}
-
-/* --------------------------------------------------------------Attribution */
-
-.attribution {
-    position: absolute;
-    inset: auto 0 1rem 0;
-
-    font-size: 1rem;
-    text-align: center;
-
-    color: var(--white);
-
-    cursor: default;
-}
-
-.attribution__link {
-    text-decoration: none;
-    font-weight: 700;
-    color: var(--white);
-    transition: color 200ms;
-}
-
-.attribution__link:hover {
-    color: var(--soft-violet);
 }
